Add surfire plugin for testing